Dropdown z-index issue fix

--- a/style.css
+++ b/style.css
@@ -777,7 +777,7 @@ box-shadow: 0 1px 0 rgba(255,255,255,0.1); }
 #nav-topbar-nav.nav-menu.mobile > div > ul { border-top: 1px solid rgba(255,255,255,0.07); }
 
 /* header menu styling */
-#nav-header-nav.nav-menu:not(.mobile) { background: #26abd3; text-transform: uppercase; font-size: 15px; font-weight: 600; position: relative; z-index: 4; }
+#nav-header-nav.nav-menu:not(.mobile) { background: #26abd3; text-transform: uppercase; font-size: 15px; font-weight: 600; position: relative; }
 #nav-header-nav.nav-menu:not(.mobile) a { color: rgba(255,255,255,0.7); }
 #nav-header-nav.nav-menu:not(.mobile) a:hover { color: #fff; }
 #nav-header-nav.nav-menu:not(.mobile) button .svg-icon { fill: rgba(255,255,255,0.4); }
@@ -812,7 +812,7 @@ box-shadow: 0 1px 0 rgba(255,255,255,0.1); }
 #nav-header-nav.nav-menu.mobile > div > ul { border-top: 1px solid rgba(255,255,255,0.12); }
 
 /* subheader menu styling */
-#nav-subheader-nav.nav-menu:not(.mobile) { background: transparent; text-transform: none; font-size: 14px; font-weight: 400; position: relative; z-index: 3; }
+#nav-subheader-nav.nav-menu:not(.mobile) { background: transparent; text-transform: none; font-size: 14px; font-weight: 400; position: relative; }
 #nav-subheader-nav.nav-menu:not(.mobile) .menu ul { font-size: 14px; box-shadow: 0 4px 10px rgba(0,0,0,0.06); }
 #nav-subheader-nav.nav-menu:not(.mobile) .menu ul span { border-bottom: 1px solid rgba(0,0,0,0.06); }
 #nav-subheader-nav.nav-menu:not(.mobile) .menu ul li:last-child span { border-bottom: 0; }
